--- a/auth-system/backend/authapp/src/main/resources/application.properties
+++ b/auth-system/backend/authapp/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=authapp
+# 포트
+server.port=9090
+
+# MySQL DB connection
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/authapp?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=admin
+
+# JPA ddl, Naming and log
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.show-sql=true
